fix arrow button not showing

--- a/css/styles.css
+++ b/css/styles.css
@@ -171,11 +171,10 @@ header:hover .menu ul {
   width: 87px;
   border: 1px solid #fff;
   border-radius: 50%;
-  background: url("/images/right-arrow.png") no-repeat;
-  background-size: 14px !important;
+  background: url("../images/right-arrow.png"));
+  background-size: 14px;
   background-position: center;
   transition: all ease 0.5s;
-  z-index: 99;
 }
 
 .btn:hover {
